 2018-02-18	v2.21.8  olikraus@gmail.com
  * Support for SH1107 (issue 501)
  * Support for HX1230 (issue 469)
  * Bugfix for displays with display height not a multiple of 8 (issue 469)
  * FontUsage demo for full buffer mode (issue 490) 
  * Added 1x2 (double height) draw procedures to U8x8 (issue 474)
    With this feature a 128x32 display can replace a 16x2 Char LCD.
  * New constructor for the Good Display 200x200 eInk (issue 454)
  * Update for the ST7920 device for more stable output (issue 487)
  * Double height (2x1) chars for U8x8 API (issue 474)
  * Excluded I2C for several ATMega uC which do not have HW I2C (issue 508)
  * Fixed UC1610 contrast command (issue 428)
  * Added WQY Chinese fonts at sizes 12, 13, 14, 15 and 16 
     including gb2312 support (issue 455)
  * Added new full buffer demo for the Chinese fonts (Shennong.ino, issue #455)
  * Added siji icon font u8g2_font_siji_t_6x10 (issue 451)
 2018-04-30	v2.22.18  olikraus@gmail.com
  * Bugfix for draw1x2string (u8x8 API)
  * Changed return value for "begin()" (issue 518)
  * New feature: U8log, https://github.com/olikraus/u8g2/wiki/u8logreference
  * Added SSD1306 128x64 Adafruit OLED (issue 521)
  * Added Winstart SSD1306 64x48 OLED variant (issue 522)
  * Added support for JLX240160 (issue 556)
  * Added support for JLX12864 (ST7565 variant, issue 440)
  * Added support for JLX256160 (issue 561)
  * Added support for SH1122 256x64 OLED (issue 420)
  * Added open iconic icons (issue 535)
  * Added several Persian fonts (issue 541)
  * Added additional Japanese font variants (issue 581)
  * Added Devanagari/Hindi font variant (issue 584)
  * Added tom-thumb font (issue 563)
  * Added AVR specific optimization for 3-wire Software SPI (issue 586)
 2018-xx-xx	v2.23.xx  olikraus@gmail.com
  * NEW FONT FORMAT for speedup of the unicode font section (issue 596)  
  * Fixed a bug in the font construction for monospaced fonts (issue 669) 
  * Added SpaceTrash game (issue 622)
  